--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -15,7 +15,7 @@
             <div class="col-lg">
               <h4>Criar uma conta agora</h4>
               <p>Se você ainda não tem uma conta, preencha o formulário abaixo:</p>
-              <form action="/login/register" method="POST">
+              <form class="form-cadastro" action="/login/register" method="POST">
                 <input type="hidden" name="_csrf" value=<%= csrfToken %>>
                 <div class="form-group">
                   <label>Seu e-mail</label>
@@ -34,7 +34,7 @@
             <div class="col-lg">
               <h4>Faça seu login no Sistema</h4>
               <p>Se você já tem uma conta, preencha os campos abaixo com seu e-mail e senha cadastrados:</p>
-                <form action="/login/login" method="POST">
+                <form class="form-login" action="/login/login" method="POST">
                   <input type="hidden" name="_csrf" value=<%= csrfToken %>>
                   <div class="form-group">
                     <label>Seu e-mail</label>
